production/efk-server/ingress/e2e-logs-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: e2elog-ingress-default
 namespace: logging
 annotations:
   nginx.ingress.kubernetes.io/rewrite-target: /
   kubernetes.io/ingress.class: "nginx"   
   kubernetes.io/tls-acme: "true"
   nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
   nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
   nginx.ingress.kubernetes.io/proxy-body-size: 25M
spec:
  tls:
  - hosts:
    - e2elogs.openebs.ci
    secretName: e2e-logging-ingress
  rules:
  - host: e2elogs.openebs.ci
    http:
      paths:
      - path: /
        backend:
          serviceName: kibana-logging
          servicePort: 5601
      - path: /es/
        backend:
          serviceName: elasticsearch-logging
          servicePort: 9200
      - path: /echo/
        backend:
          serviceName: echoheaders
          servicePort: 80
